s_waitpid done, s_sleep done, bugfixes needed for unblocking?

--- a/doc/latex/d0/daa/kernel_8h.tex
+++ b/doc/latex/d0/daa/kernel_8h.tex
@@ -4,6 +4,7 @@
 {\ttfamily \#include "{}array.\+h"{}}\newline
 {\ttfamily \#include "{}bitmap.\+h"{}}\newline
 {\ttfamily \#include "{}clinkedlist.\+h"{}}\newline
+{\ttfamily \#include "{}globals.\+h"{}}\newline
 {\ttfamily \#include "{}spthread.\+h"{}}\newline
 {\ttfamily \#include "{}stdlib.\+h"{}}\newline
 \doxysubsubsection*{Data Structures}
