--- a/doc/latex/d5/d87/globals_8h.tex
+++ b/doc/latex/d5/d87/globals_8h.tex
@@ -15,6 +15,8 @@
 \mbox{\hyperlink{structCircularList}{Circular\+List}} \texorpdfstring{$\ast$}{*} \mbox{\hyperlink{globals_8h_a5e7aa369c6421b8cf905e838507cc70a}{zombied}}
 \item 
 \mbox{\hyperlink{structpcb__t}{pcb\+\_\+t}} \texorpdfstring{$\ast$}{*} \mbox{\hyperlink{globals_8h_aadfd9da35df54aa07940062a8b8326e2}{current}}
+\item 
+pid\+\_\+t \mbox{\hyperlink{globals_8h_a54a60f61f4b468b7e6ef164c4b5ba60b}{next\+\_\+pid}}
 \end{DoxyCompactItemize}
 
 
@@ -30,6 +32,12 @@
 \index{current@{current}!globals.h@{globals.h}}
 \doxysubsubsection{\texorpdfstring{current}{current}}
 {\footnotesize\ttfamily \mbox{\hyperlink{structpcb__t}{pcb\+\_\+t}}\texorpdfstring{$\ast$}{*} current\hspace{0.3cm}{\ttfamily [extern]}}
+
+\Hypertarget{globals_8h_a54a60f61f4b468b7e6ef164c4b5ba60b}\label{globals_8h_a54a60f61f4b468b7e6ef164c4b5ba60b} 
+\index{globals.h@{globals.h}!next\_pid@{next\_pid}}
+\index{next\_pid@{next\_pid}!globals.h@{globals.h}}
+\doxysubsubsection{\texorpdfstring{next\_pid}{next\_pid}}
+{\footnotesize\ttfamily pid\+\_\+t next\+\_\+pid\hspace{0.3cm}{\ttfamily [extern]}}
 
 \Hypertarget{globals_8h_a02d81cd80b6c38b0ce741c9244fd9f17}\label{globals_8h_a02d81cd80b6c38b0ce741c9244fd9f17} 
 \index{globals.h@{globals.h}!processes@{processes}}
