--- a/doc/latex/db/d28/globals_8c.tex
+++ b/doc/latex/db/d28/globals_8c.tex
@@ -13,6 +13,8 @@
 \mbox{\hyperlink{structCircularList}{Circular\+List}} \texorpdfstring{$\ast$}{*} \mbox{\hyperlink{globals_8c_a5e7aa369c6421b8cf905e838507cc70a}{zombied}}
 \item 
 \mbox{\hyperlink{structpcb__t}{pcb\+\_\+t}} \texorpdfstring{$\ast$}{*} \mbox{\hyperlink{globals_8c_aadfd9da35df54aa07940062a8b8326e2}{current}} = NULL
+\item 
+pid\+\_\+t \mbox{\hyperlink{globals_8c_a54a60f61f4b468b7e6ef164c4b5ba60b}{next\+\_\+pid}} = 1
 \end{DoxyCompactItemize}
 
 
@@ -28,6 +30,12 @@
 \index{current@{current}!globals.c@{globals.c}}
 \doxysubsubsection{\texorpdfstring{current}{current}}
 {\footnotesize\ttfamily \mbox{\hyperlink{structpcb__t}{pcb\+\_\+t}}\texorpdfstring{$\ast$}{*} current = NULL}
+
+\Hypertarget{globals_8c_a54a60f61f4b468b7e6ef164c4b5ba60b}\label{globals_8c_a54a60f61f4b468b7e6ef164c4b5ba60b} 
+\index{globals.c@{globals.c}!next\_pid@{next\_pid}}
+\index{next\_pid@{next\_pid}!globals.c@{globals.c}}
+\doxysubsubsection{\texorpdfstring{next\_pid}{next\_pid}}
+{\footnotesize\ttfamily pid\+\_\+t next\+\_\+pid = 1}
 
 \Hypertarget{globals_8c_a02d81cd80b6c38b0ce741c9244fd9f17}\label{globals_8c_a02d81cd80b6c38b0ce741c9244fd9f17} 
 \index{globals.c@{globals.c}!processes@{processes}}
