--- a/doc/latex/d5/d87/globals_8h.tex
+++ b/doc/latex/d5/d87/globals_8h.tex
@@ -17,6 +17,10 @@
 \mbox{\hyperlink{structpcb__t}{pcb\+\_\+t}} \texorpdfstring{$\ast$}{*} \mbox{\hyperlink{globals_8h_aadfd9da35df54aa07940062a8b8326e2}{current}}
 \item 
 pid\+\_\+t \mbox{\hyperlink{globals_8h_a54a60f61f4b468b7e6ef164c4b5ba60b}{next\+\_\+pid}}
+\item 
+int \mbox{\hyperlink{globals_8h_abfb6a5b45038dfab7134f82adad169d7}{logfiledescriptor}}
+\item 
+unsigned int \mbox{\hyperlink{globals_8h_a6c17b5754a836f005f69312ee0080106}{tick}}
 \end{DoxyCompactItemize}
 
 
@@ -32,6 +36,12 @@ pid\+\_\+t \mbox{\hyperlink{globals_8h_a54a60f61f4b468b7e6ef164c4b5ba60b}{next\+
 \index{current@{current}!globals.h@{globals.h}}
 \doxysubsubsection{\texorpdfstring{current}{current}}
 {\footnotesize\ttfamily \mbox{\hyperlink{structpcb__t}{pcb\+\_\+t}}\texorpdfstring{$\ast$}{*} current\hspace{0.3cm}{\ttfamily [extern]}}
+
+\Hypertarget{globals_8h_abfb6a5b45038dfab7134f82adad169d7}\label{globals_8h_abfb6a5b45038dfab7134f82adad169d7} 
+\index{globals.h@{globals.h}!logfiledescriptor@{logfiledescriptor}}
+\index{logfiledescriptor@{logfiledescriptor}!globals.h@{globals.h}}
+\doxysubsubsection{\texorpdfstring{logfiledescriptor}{logfiledescriptor}}
+{\footnotesize\ttfamily int logfiledescriptor\hspace{0.3cm}{\ttfamily [extern]}}
 
 \Hypertarget{globals_8h_a54a60f61f4b468b7e6ef164c4b5ba60b}\label{globals_8h_a54a60f61f4b468b7e6ef164c4b5ba60b} 
 \index{globals.h@{globals.h}!next\_pid@{next\_pid}}
@@ -50,6 +60,12 @@ pid\+\_\+t \mbox{\hyperlink{globals_8h_a54a60f61f4b468b7e6ef164c4b5ba60b}{next\+
 \index{stopped@{stopped}!globals.h@{globals.h}}
 \doxysubsubsection{\texorpdfstring{stopped}{stopped}}
 {\footnotesize\ttfamily \mbox{\hyperlink{structCircularList}{Circular\+List}}\texorpdfstring{$\ast$}{*} stopped\hspace{0.3cm}{\ttfamily [extern]}}
+
+\Hypertarget{globals_8h_a6c17b5754a836f005f69312ee0080106}\label{globals_8h_a6c17b5754a836f005f69312ee0080106} 
+\index{globals.h@{globals.h}!tick@{tick}}
+\index{tick@{tick}!globals.h@{globals.h}}
+\doxysubsubsection{\texorpdfstring{tick}{tick}}
+{\footnotesize\ttfamily unsigned int tick\hspace{0.3cm}{\ttfamily [extern]}}
 
 \Hypertarget{globals_8h_a5e7aa369c6421b8cf905e838507cc70a}\label{globals_8h_a5e7aa369c6421b8cf905e838507cc70a} 
 \index{globals.h@{globals.h}!zombied@{zombied}}
