--- a/doc/latex/db/d28/globals_8c.tex
+++ b/doc/latex/db/d28/globals_8c.tex
@@ -15,6 +15,10 @@
 \mbox{\hyperlink{structpcb__t}{pcb\+\_\+t}} \texorpdfstring{$\ast$}{*} \mbox{\hyperlink{globals_8c_aadfd9da35df54aa07940062a8b8326e2}{current}} = NULL
 \item 
 pid\+\_\+t \mbox{\hyperlink{globals_8c_a54a60f61f4b468b7e6ef164c4b5ba60b}{next\+\_\+pid}} = 1
+\item 
+int \mbox{\hyperlink{globals_8c_abfb6a5b45038dfab7134f82adad169d7}{logfiledescriptor}} = 0
+\item 
+unsigned int \mbox{\hyperlink{globals_8c_a6c17b5754a836f005f69312ee0080106}{tick}} = 0
 \end{DoxyCompactItemize}
 
 
@@ -30,6 +34,12 @@ pid\+\_\+t \mbox{\hyperlink{globals_8c_a54a60f61f4b468b7e6ef164c4b5ba60b}{next\+
 \index{current@{current}!globals.c@{globals.c}}
 \doxysubsubsection{\texorpdfstring{current}{current}}
 {\footnotesize\ttfamily \mbox{\hyperlink{structpcb__t}{pcb\+\_\+t}}\texorpdfstring{$\ast$}{*} current = NULL}
+
+\Hypertarget{globals_8c_abfb6a5b45038dfab7134f82adad169d7}\label{globals_8c_abfb6a5b45038dfab7134f82adad169d7} 
+\index{globals.c@{globals.c}!logfiledescriptor@{logfiledescriptor}}
+\index{logfiledescriptor@{logfiledescriptor}!globals.c@{globals.c}}
+\doxysubsubsection{\texorpdfstring{logfiledescriptor}{logfiledescriptor}}
+{\footnotesize\ttfamily int logfiledescriptor = 0}
 
 \Hypertarget{globals_8c_a54a60f61f4b468b7e6ef164c4b5ba60b}\label{globals_8c_a54a60f61f4b468b7e6ef164c4b5ba60b} 
 \index{globals.c@{globals.c}!next\_pid@{next\_pid}}
@@ -48,6 +58,12 @@ pid\+\_\+t \mbox{\hyperlink{globals_8c_a54a60f61f4b468b7e6ef164c4b5ba60b}{next\+
 \index{stopped@{stopped}!globals.c@{globals.c}}
 \doxysubsubsection{\texorpdfstring{stopped}{stopped}}
 {\footnotesize\ttfamily \mbox{\hyperlink{structCircularList}{Circular\+List}}\texorpdfstring{$\ast$}{*} stopped}
+
+\Hypertarget{globals_8c_a6c17b5754a836f005f69312ee0080106}\label{globals_8c_a6c17b5754a836f005f69312ee0080106} 
+\index{globals.c@{globals.c}!tick@{tick}}
+\index{tick@{tick}!globals.c@{globals.c}}
+\doxysubsubsection{\texorpdfstring{tick}{tick}}
+{\footnotesize\ttfamily unsigned int tick = 0}
 
 \Hypertarget{globals_8c_a5e7aa369c6421b8cf905e838507cc70a}\label{globals_8c_a5e7aa369c6421b8cf905e838507cc70a} 
 \index{globals.c@{globals.c}!zombied@{zombied}}
