--- a/doc/latex/d5/d87/globals_8h_source.tex
+++ b/doc/latex/d5/d87/globals_8h_source.tex
@@ -20,8 +20,12 @@
 \DoxyCodeLine{00016\ \textcolor{keyword}{extern}\ \mbox{\hyperlink{structpcb__t}{pcb\_t}}*\ \mbox{\hyperlink{globals_8h_aadfd9da35df54aa07940062a8b8326e2}{current}};}
 \DoxyCodeLine{00017\ }
 \DoxyCodeLine{00018\ \textcolor{keyword}{extern}\ pid\_t\ \mbox{\hyperlink{globals_8h_a54a60f61f4b468b7e6ef164c4b5ba60b}{next\_pid}};\ \ \textcolor{comment}{//\ idk,\ i\ guess\ redefine\ this\ if\ you\ want\ to\ reuse\ pcbs?}}
-\DoxyCodeLine{00019\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{comment}{//\ i\ have\ no\ strong\ urge\ to\ write\ that\ function}}
+\DoxyCodeLine{00019\ \textcolor{comment}{//\ i\ have\ no\ strong\ urge\ to\ write\ that\ function}}
 \DoxyCodeLine{00020\ }
-\DoxyCodeLine{00021\ \textcolor{preprocessor}{\#endif}}
+\DoxyCodeLine{00021\ \textcolor{keyword}{extern}\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{globals_8h_abfb6a5b45038dfab7134f82adad169d7}{logfiledescriptor}};}
+\DoxyCodeLine{00022\ }
+\DoxyCodeLine{00023\ \textcolor{keyword}{extern}\ \textcolor{keywordtype}{unsigned}\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{globals_8h_a6c17b5754a836f005f69312ee0080106}{tick}};}
+\DoxyCodeLine{00024\ }
+\DoxyCodeLine{00025\ \textcolor{preprocessor}{\#endif}}
 
 \end{DoxyCode}
